# 115TS

./: .gitignore  DEPLOY.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/adapters/: __init__.py  feishu_client.py  feishu_sheet.py  telegram_bot.py
backend/app/api/: auth.py  config.py  dirs.py  history.py  tasks.py
backend/app/services/: classifier.py  deduper.py  link_parser.py  login_manager.py  metadata_scraper.py  path_resolver.py  share_fetcher.py  task_runner.py  task_service.py  transfer_task.py
backend/app/utils/: auth_middleware.py  crypto.py  sse.py
backend/tests/fixtures/: filenames.py  links.py  p115_responses.py  tmdb_responses.py
backend/tests/integration/: test_api_feishu_test.py  test_api_smoke.py  test_db.py  test_resolve_cid.py  test_task_recovery.py  test_task_runner_pipeline.py  test_task_runner_with_adapters.py
backend/tests/unit/: test_auth_middleware.py  test_classifier.py  test_config.py  test_crypto.py  test_deduper.py  test_feishu_client.py  test_feishu_sheet.py  test_link_parser.py  test_login_manager.py  test_metadata_scraper.py  test_path_resolver.py  test_share_fetcher.py  test_sse.py  test_task_service.py  test_telegram_bot.py  test_transfer_task.py
docs/superpowers/plans/: 2026-07-02-plan-a-backend-mvp.md  2026-07-02-plan-b1-web-ui.md  2026-07-03-plan-b2.md
docs/superpowers/specs/: 2026-07-02-115-auto-save-design.md  (+1 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
(+17 files in other folders)
