[project]
name = "cloud115-auto-save"
version = "0.1.0"
description = "115 网盘自动转存与分类系统 - 后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.25",
    "httpx>=0.27.0",
    "loguru>=0.7.2",
    "apscheduler>=3.10.4",
    "p115client[qrcode]>=0.0.9.3.6",
    "cryptography>=42.0.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.9",
    "python-telegram-bot>=21.0,<22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.2",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
